--- a/Changes
+++ b/Changes
@@ -1,22 +1,27 @@
 Revision history for PGObject-Simple
 
+1.8     2016-11-20
+        Fix issue #5: Don't call $value->to_db() [PGObject already does]
+        Fix issue #6: Don't special-case BYTEA arguments
+        Fix author tests
+
 1.7     2014-08-19
         1. Solved a number of issues regarding overriding defaults for 
         application frameworks
 
-1.6	2014-02-24
-	1. Added per class schema handling (overridden by per call handling).
-	2. Re-arranged requirements in Makefile.PL
-	3. DB tests now use DB_TESTING=1 to set on, consistent with other
-	PGObject modules
+1.6     2014-02-24
+        1. Added per class schema handling (overridden by per call handling).
+        2. Re-arranged requirements in Makefile.PL
+        3. DB tests now use DB_TESTING=1 to set on, consistent with other
+        PGObject modules
 
-1.5	2014-02-16
-	1. Added contextual return handling so that db procedure calls can 
-	return either the first row of the set (usually useful where that is
-	the only row) or the full set.
+1.5     2014-02-16
+        1. Added contextual return handling so that db procedure calls can 
+        return either the first row of the set (usually useful where that is
+        the only row) or the full set.
 
-1.4	2013-11-12
-	1.  Fixed __PACKAGE__->call_dbmethod interface so it works.
+1.4     2013-11-12
+        1.  Fixed __PACKAGE__->call_dbmethod interface so it works.
 
 1.3     2013-06-07
         1. Fixed test case that caused thins to bomb
