--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for PGObject-Simple
 
+
+1.10    2016-11-21
+        Fix minimum dependency on PGObject
+
 1.9     2016-11-20
         Fix issue #5: Don't call $value->to_db() [PGObject already does]
         Fix issue #6: Don't special-case BYTEA arguments
