--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for PGObject-Simple
 
 
+1.91    2016-11-21
+        CPAN won't accept 1.10.1 as it's lower than 1.9... Renumbering
+
 1.10.1  2016-11-21
         Fix minimum dependency on PGObject
 
