--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for PGObject-Simple
 
+3.0.2	2016-06-10
+	Fixed bug introduced during refactoring for byteas
+
 3.0.1	2017-05-20
 	Fixed a bug where package defaults are never called where they should be
 
