--- a/README
+++ b/README
@@ -21,10 +21,10 @@ INSTALLATION
 
 To install this module, run the following commands:
 
-	perl Makefile.PL
-	make
-	make test
-	make install
+        perl Makefile.PL
+        make
+        make test
+        make install
 
 SUPPORT AND DOCUMENTATION
 
@@ -36,21 +36,16 @@ perldoc command.
 You can also look for information at:
 
     RT, CPAN's request tracker (report bugs here)
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=PGObject-Simple
+        https://rt.cpan.org/NoAuth/Bugs.html?Dist=PGObject-Simple
 
-    AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/PGObject-Simple
-
-    CPAN Ratings
-        http://cpanratings.perl.org/d/PGObject-Simple
-
-    Search CPAN
-        http://search.cpan.org/dist/PGObject-Simple/
+    MetaCPAN
+        https://metacpan.org/dist/PGObject-Simple
 
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2013 Chris Travers
+  COPYRIGHT (C) 2013-2014 Chris Travers
+  COPYRIGHT (C) 2014-2021 The LedgerSMB Core Team
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of either: the GNU General Public License as published
